@@ -34,34 +34,34 @@ subtest 'strict booleans (default)' => sub {
   );
 
   cmp_deeply(
-    $js->evaluate($_, { type => 'boolean' })->TO_JSON,
+    $js->evaluate($_->[1], { type => 'boolean' })->TO_JSON,
     {
       valid => false,
       errors => [
         {
           instanceLocation => '',
           keywordLocation => '/type',
-          error => 'wrong type (expected boolean)',
+          error => 'got '.$_->[0].', not boolean',
         },
       ],
     },
-    'correct error generated from type for '.serialize($_),
+    'correct error generated from type for '.serialize($_->[1]),
   )
   foreach (
-    undef,
-    0,
-    1,
-    '0',
-    '1',
-    'false',
-    'true',
-    \0,
-    \1,
+    [ null => undef ],
+    [ integer => 0 ],
+    [ integer => 1 ],
+    [ string => '0' ],
+    [ string => '1' ],
+    [ string => 'false' ],
+    [ string => 'true' ],
+    [ 'reference to SCALAR' => \0 ],
+    [ 'reference to SCALAR' => \1 ],
   );
 
   cmp_deeply(
     $js->evaluate(
-      $_,
+      $_->[1],
       $test_schema = {
         allOf => [ { type => 'boolean' }, { type => ['boolean','object'] } ],
         anyOf => [ { const => false }, { const => true } ],
@@ -74,12 +74,12 @@ subtest 'strict booleans (default)' => sub {
         {
           instanceLocation => '',
           keywordLocation => '/allOf/0/type',
-          error => 'wrong type (expected boolean)',
+          error => 'got '.$_->[0].', not boolean',
         },
         {
           instanceLocation => '',
           keywordLocation => '/allOf/1/type',
-          error => 'wrong type (expected one of boolean, object)',
+          error => 'got '.$_->[0].', not one of boolean, object',
         },
         {
           instanceLocation => '',
@@ -108,18 +108,18 @@ subtest 'strict booleans (default)' => sub {
         },
       ],
     },
-    'in data, '.serialize($_).' not is a boolean',
+    'in data, '.serialize($_->[1]).' not is a boolean',
   )
   foreach (
-    undef,
-    0,
-    1,
-    '0',
-    '1',
-    'false',
-    'true',
-    \0,
-    \1,
+    [ null => undef ],
+    [ integer => 0 ],
+    [ integer => 1 ],
+    [ string => '0' ],
+    [ string => '1' ],
+    [ string => 'false' ],
+    [ string => 'true' ],
+    [ 'reference to SCALAR' => \0 ],
+    [ 'reference to SCALAR' => \1 ],
   );
 };
 
@@ -138,18 +138,29 @@ subtest 'scalarref_booleans = 1' => sub {
   );
 
   cmp_deeply(
-    $js->evaluate($_, $test_schema)->TO_JSON,
-    $failure_result,
+    $js->evaluate($_->[1], $test_schema)->TO_JSON,
+    {
+      valid => false,
+      errors => [
+        do {
+          my ($type, $value) = $_->@*;
+          map +{
+            $_->%*,
+            $_->{keywordLocation} =~ /\/type$/ ? (error => $_->{error} =~ s/^got .*, not/got $type, not/r) : (),
+          }, $failure_result->{errors}->@*,
+        },
+      ],
+    },
     'correct error generated from type for '.serialize($_),
   )
   foreach (
-    undef,
-    0,
-    1,
-    '0',
-    '1',
-    'false',
-    'true',
+    [ null => undef ],
+    [ integer => 0 ],
+    [ integer => 1 ],
+    [ string => '0' ],
+    [ string => '1' ],
+    [ string => 'false' ],
+    [ string => 'true' ],
   );
 
   cmp_deeply(
